feat: add a simple redux counter app

--- a/package.json
+++ b/package.json
@@ -30,17 +30,13 @@
     "url": "https://github.com/rangle/ng-typescript-webpack-starter/issues"
   },
   "dependencies": {
-    "angular": "^1.4.7",
-    "angular-ui-router": "^0.2.15",
-    "basscss": "^7.0.4",
+    "angular": "^1.4.8",
     "chalk": "^1.1.1",
     "es6-shim": "^0.33.10",
     "express": "^4.13.3",
-    "font-awesome": "^4.4.0",
-    "immutable": "^3.7.5",
-    "koast-angular": "^0.2.2",
-    "lodash-compat": "^3.10.1",
-    "rx": "4.0.0",
+    "ng-redux": "^3.1.1",
+    "redux": "^3.0.4",
+    "redux-thunk": "^1.0.0",
     "winston": "^2.1.1"
   },
   "devDependencies": {
@@ -75,9 +71,9 @@
     "ts-loader": "^0.6.0",
     "tsd": "^0.6.5",
     "tslint-loader": "^1.0.2",
-    "typescript": "^1.6.2",
+    "typescript": "^1.7.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
