--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.13.3",
     "ng-redux": "^3.1.1",
     "redux": "^3.0.4",
+    "redux-logger": "^2.1.4",
     "redux-thunk": "^1.0.0",
     "winston": "^2.1.1"
   },
