--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "postinstall": "npm run typings; npm run build;",
     "typings": "rimraf typings && tsd install && tsd link",
-    "dev": "NODE_ENV=development webpack-dev-server --display-error-details --display-cached",
+    "dev": "NODE_ENV=development nodemon server.js",
     "start": "NODE_ENV=production node server.js",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
@@ -62,6 +62,7 @@
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.3",
+    "nodemon": "^1.8.1",
     "ramda": "^0.18.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.4.3",
@@ -75,6 +76,6 @@
     "typescript": "^1.7.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-middleware": "^1.4.0"
   }
 }
