--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux": "^3.0.4",
     "redux-logger": "^2.1.4",
     "redux-thunk": "^1.0.0",
+    "serve-webpack-client": "0.0.4",
     "winston": "^2.1.1"
   },
   "devDependencies": {
