--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chalk": "^1.1.1",
     "es6-shim": "^0.33.10",
     "express": "^4.13.3",
+    "http-proxy": "^1.12.1",
     "ng-redux": "^3.1.1",
     "redux": "^3.0.4",
     "redux-logger": "^2.1.4",
