--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
   },
   "scripts": {
     "postinstall": "npm run typings; npm run build;",
-    "typings": "rimraf typings && tsd install && tsd link",
+    "typings": "rimraf typings && typings install",
     "dev": "NODE_ENV=development nodemon server.js",
     "start": "NODE_ENV=production node server.js",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack",
-    "test": "karma start",
-    "e2e": "npm run build && gulp e2e"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -29,55 +28,47 @@
   "bugs": {
     "url": "https://github.com/rangle/ng-typescript-webpack-starter/issues"
   },
-  "dependencies": {
-    "angular": "^1.4.8",
-    "chalk": "^1.1.1",
-    "es6-shim": "^0.33.10",
-    "express": "^4.13.3",
-    "http-proxy": "^1.12.1",
-    "ng-redux": "^3.1.1",
-    "redux": "^3.0.4",
-    "redux-logger": "^2.1.4",
-    "redux-thunk": "^1.0.0",
-    "serve-webpack-client": "0.0.4",
-    "winston": "^2.1.1"
-  },
   "devDependencies": {
-    "angular-mocks": "^1.4.7",
-    "chai": "^3.4.0",
-    "css-loader": "^0.21.0",
-    "extract-text-webpack-plugin": "^0.9.0",
-    "file-loader": "^0.8.4",
-    "gulp": "^3.9.0",
-    "gulp-webdriver": "^1.0.1",
-    "gulp-webserver": "^0.9.1",
-    "html-webpack-plugin": "^1.6.2",
-    "istanbul": "^0.4.0",
-    "istanbul-instrumenter-loader": "^0.1.3",
-    "karma": "^0.13.15",
+    "angular": "^1.4.9",
+    "angular-mocks": "^1.4.9",
+    "chai": "^3.5.0",
+    "chalk": "^1.1.1",
+    "css-loader": "^0.23.1",
+    "es6-shim": "^0.34.2",
+    "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.7.2",
+    "http-proxy": "^1.13.0",
+    "karma": "^0.13.19",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.1",
+    "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
-    "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.1.1",
+    "karma-mocha": "^0.2.1",
+    "karma-mocha-reporter": "^1.1.5",
     "karma-sinon": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.6",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.3.3",
+    "mocha": "^2.4.5",
+    "ng-redux": "^3.3.3",
     "nodemon": "^1.8.1",
-    "ramda": "^0.18.0",
+    "ramda": "^0.19.1",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.4.3",
-    "selenium-standalone": "^4.7.1",
-    "sinon": "^1.17.2",
+    "redux": "^3.1.7",
+    "redux-logger": "^2.4.0",
+    "redux-thunk": "^1.0.3",
+    "rimraf": "^2.5.1",
+    "serve-webpack-client": "0.0.4",
+    "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
-    "ts-loader": "^0.6.0",
-    "tsd": "^0.6.5",
-    "tslint-loader": "^1.0.2",
-    "typescript": "^1.7.3",
-    "url-loader": "^0.5.6",
+    "ts-loader": "^0.8.0",
+    "tslint": "^3.3.0",
+    "tslint-loader": "^2.1.0",
+    "typescript": "^1.7.5",
+    "typings": "^0.6.4",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0"
+    "winston": "^2.1.1"
   }
 }
