--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,8 @@
   },
   "exclude": [
     "node_modules",
-    "app/__build"
-  ],
-  "files": [
+    "dist",
+    "typings/main",
     "typings/main.d.ts"
   ]
 }
