Make sure CI fails if there are `tslint` errors.
Connected to rangle/rangle-starter#13

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack",
-    "test": "karma start"
+    "test": "npm run lint && karma start",
+    "lint": "tslint 'src/**/*.ts'"
   },
   "repository": {
     "type": "git",
