--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "chalk": "^1.1.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "es6-shim": "^0.34.2",
+    "es5-shim": "^4.5.6",
+    "es6-promise": "^3.1.2",
+    "es6-shim": "^0.34.4",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
