--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "scripts": {
     "postinstall": "npm run typings && npm run build",
     "typings": "rimraf typings && typings install",
-    "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "start": "cross-env NODE_ENV=production node server.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot --progress --no-info",
+    "start": "cross-env NODE_ENV=production node server/node-server.js",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production webpack -p",
     "test": "npm run lint && karma start",
     "lint": "tslint './src/**/*.ts'"
   },
@@ -29,21 +29,24 @@
   "bugs": {
     "url": "https://github.com/rangle/rangle-starter/issues"
   },
+  "dependencies": {
+    "express": "^4.13.4",
+    "helmet": "^1.3.0",
+    "http-proxy": "^1.13.2",
+    "winston": "^2.1.1"
+  },
   "devDependencies": {
     "angular": "^1.4.9",
     "angular-mocks": "^1.4.9",
     "chai": "^3.5.0",
-    "chalk": "^1.1.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "es5-shim": "^4.5.6",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
-    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.7.2",
-    "http-proxy": "^1.13.0",
     "karma": "^0.13.19",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.2",
@@ -55,14 +58,12 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "ng-redux": "^3.3.3",
-    "nodemon": "^1.8.1",
     "ramda": "^0.19.1",
     "raw-loader": "^0.5.1",
     "redux": "^3.1.7",
     "redux-logger": "^2.4.0",
     "redux-thunk": "^1.0.3",
     "rimraf": "^2.5.1",
-    "serve-webpack-client": "0.0.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
@@ -73,6 +74,7 @@
     "typings": "^0.6.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
-    "winston": "^2.1.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.9.1"
   }
 }
