--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "devDependencies": {
     "angular": "^1.4.9",
     "angular-mocks": "^1.4.9",
+    "basscss": "^8.0.1",
+    "basscss-addons": "^1.0.0-beta4",
+    "basscss-basic": "^1.0.0",
     "chai": "^3.5.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
@@ -58,6 +61,9 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "ng-redux": "^3.3.3",
+    "postcss-cssnext": "^2.4.0",
+    "postcss-import": "^8.0.2",
+    "postcss-loader": "^0.8.1",
     "ramda": "^0.19.1",
     "raw-loader": "^0.5.1",
     "redux": "^3.1.7",
