--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "node": "4.x"
   },
   "scripts": {
-    "postinstall": "npm run typings && npm run build",
-    "typings": "rimraf typings && typings install",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot --progress --no-info",
-    "start": "cross-env NODE_ENV=production node server/node-server.js",
-    "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production webpack -p",
-    "test": "npm run lint && karma start",
-    "lint": "tslint './src/**/*.ts'"
+    "clean": "rimraf dist/",
+    "cover": "remap-istanbul -i coverage/chrome/coverage-final.json -o coverage/coverage.json",
+    "postcover": "istanbul report lcov text-summary",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot --progress --no-info",
+    "lint": "tslint './src/**/*.ts'",
+    "postinstall": "npm run typings && npm run build",
+    "start": "cross-env NODE_ENV=production node server/node-server.js",
+    "pretest": "rimraf coverage/ & npm run lint",
+    "test": "karma start",
+    "posttest": "npm run cover",
+    "test:watch": "karma start --singleRun false",
+    "typings": "rimraf typings/ && typings install"
   },
   "repository": {
     "type": "git",
@@ -30,14 +35,7 @@
     "url": "https://github.com/rangle/rangle-starter/issues"
   },
   "dependencies": {
-    "express": "^4.13.4",
-    "helmet": "^1.3.0",
-    "http-proxy": "^1.13.2",
-    "winston": "^2.1.1"
-  },
-  "devDependencies": {
-    "angular": "^1.4.9",
-    "angular-mocks": "^1.4.9",
+    "angular": "^1.5.0",
     "autoprefixer": "^6.3.3",
     "autoprefixer-core": "^6.0.1",
     "basscss": "^8.0.1",
@@ -54,46 +52,56 @@
     "basscss-position": "^2.0.3",
     "basscss-type-scale": "^1.0.5",
     "basscss-typography": "^3.0.3",
+    "express": "^4.13.4",
+    "helmet": "^1.3.0",
+    "http-proxy": "^1.13.2",
+    "winston": "^2.2.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.5.0",
     "chai": "^3.5.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "es5-shim": "^4.5.6",
+    "es5-shim": "^4.5.7",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.7.2",
-    "karma": "^0.13.19",
+    "html-webpack-plugin": "^2.10.0",
+    "istanbul": "^0.4.2",
+    "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.2",
-    "karma-coverage": "^0.5.3",
-    "karma-mocha": "^0.2.1",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
     "karma-mocha-reporter": "^2.0.0",
     "karma-sinon": "^1.0.4",
+    "karma-source-map-support": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "ng-redux": "^3.3.3",
-    "postcss-cssnext": "^2.4.0",
+    "postcss-cssnext": "^2.5.1",
     "postcss-import": "^8.0.2",
-    "postcss-loader": "^0.8.1",
+    "postcss-loader": "^0.8.2",
     "ramda": "^0.19.1",
     "raw-loader": "^0.5.1",
-    "redux": "^3.1.7",
-    "redux-logger": "^2.4.0",
+    "redux": "^3.3.1",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
-    "rimraf": "^2.5.1",
+    "remap-istanbul": "^0.5.1",
+    "rimraf": "^2.5.2",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
-    "ts-loader": "^0.8.0",
-    "tslint": "^3.4.0",
-    "tslint-loader": "^2.1.0",
-    "typescript": "^1.8.0",
+    "ts-loader": "^0.8.1",
+    "tslint": "^3.6.0",
+    "tslint-loader": "^2.1.3",
+    "typescript": "^1.8.7",
     "typings": "^0.7.9",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
+    "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.9.1"
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
