--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "ramda": "^0.19.1",
     "raw-loader": "^0.5.1",
     "redux": "^3.3.1",
+    "redux-localstorage": "^0.4.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "remap-istanbul": "^0.5.1",
