Add css linting rules to cause errors in `npm test` (to fail CI builds) and show warnings via console when running `npm run dev`.
Clean up `index.css` to adhere to newly imposed rules.

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "cover": "remap-istanbul -i coverage/chrome/coverage-final.json -o coverage/coverage.json",
     "postcover": "istanbul report lcov text-summary",
     "dev": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info",
-    "lint": "tslint './src/**/*.ts'",
+    "lint": "npm run lint-ts && npm run lint-css",
+    "lint-ts": "tslint './src/**/*.ts'",
+    "lint-css": "stylelint './src/**/*.css'",
     "postinstall": "npm run typings && npm run build",
     "start": "cross-env NODE_ENV=production node server/node-server.js",
-    "pretest": "rimraf coverage/ & npm run lint",
+    "pretest": "rimraf coverage/ && npm run lint",
     "test": "karma start",
     "posttest": "npm run cover",
     "test:watch": "karma start --singleRun false",
@@ -97,6 +99,8 @@
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
+    "stylelint": "^5.4.0",
+    "stylelint-webpack-plugin": "^0.1.0",
     "ts-loader": "^0.8.1",
     "tslint": "^3.6.0",
     "tslint-loader": "^2.1.3",
