Locally scope CSS by default.

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "postcss-cssnext": "^2.5.1",
     "postcss-import": "^8.0.2",
     "postcss-loader": "^0.8.2",
+    "postcss-modules-local-by-default": "^1.0.1",
     "ramda": "^0.21.0",
     "raw-loader": "^0.5.1",
     "redux": "^3.4.0",
