--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "chai": "^3.5.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
+    "cssnano": "^3.5.2",
     "es5-shim": "^4.5.7",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
