--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.10.0",
+    "webpack-split-by-path": "0.0.8"
   }
 }
