Switch auth to go against actual http server. Add service unit tests. (#95)
Switch auth to go issue actual http requests. Add real tests.

--- a/package.json
+++ b/package.json
@@ -62,19 +62,23 @@
     "basscss-position": "^2.0.3",
     "basscss-type-scale": "^1.0.5",
     "basscss-typography": "^3.0.3",
+    "body-parser": "^1.15.0",
     "chai": "^3.5.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "cssnano": "^3.5.2",
+    "denodeify": "^1.2.1",
     "es5-shim": "^4.5.7",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "eslint": "^2.9.0",
+    "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.10.0",
     "immutable": "^3.7.6",
-    "istanbul": "^0.4.2",
+    "istanbul": "^0.4.3",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.2",
@@ -88,6 +92,8 @@
     "mocha": "^2.4.5",
     "ng-redux": "^3.3.3",
     "ngcomponentrouter": "^2.0.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "postcss-cssnext": "^2.5.1",
     "postcss-import": "^8.0.2",
     "postcss-loader": "^0.9.1",
@@ -114,6 +120,7 @@
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0",
-    "webpack-split-by-path": "0.0.8"
+    "webpack-split-by-path": "0.0.8",
+    "winston": "^2.2.0"
   }
 }
