Fix - Start both node and webpack-dev servers in dev mode for http login (#112)
- Add concurrently and update app to start both servers at once but on different ports
- Add proxy to webpack-dev-server to redirect api calls to backend server
- Update node version in circle.yml

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "typescript"
   ],
   "engines": {
-    "node": "4.x"
+    "node": "4.4.4"
   },
   "scripts": {
     "prebuild": "npm run clean",
@@ -17,7 +17,9 @@
     "clean": "rimraf dist/",
     "cover": "remap-istanbul -i coverage/chrome/coverage-final.json -o coverage/coverage.json",
     "postcover": "istanbul report lcov text-summary",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info",
+    "dev:server": "cross-env NODE_ENV=development PORT=3000 nodemon server/node-server.js",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info",
+    "dev": "concurrently 'npm run dev:client' 'npm run dev:server'",
     "lint": "npm run lint-ts && npm run lint-js && npm run lint-css",
     "lint-ts": "tslint './src/**/*.ts'",
     "lint-js": "eslint '**/*.js' --ignore-path .gitignore",
@@ -64,6 +66,7 @@
     "basscss-typography": "^3.0.3",
     "body-parser": "^1.15.0",
     "chai": "^3.5.0",
+    "concurrently": "^2.0.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "cssnano": "^3.5.2",
@@ -92,6 +95,7 @@
     "mocha": "^2.4.5",
     "ng-redux": "^3.3.3",
     "ngcomponentrouter": "^2.0.0",
+    "nodemon": "^1.9.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "postcss-cssnext": "^2.5.1",
