--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postcover": "istanbul report lcov text-summary",
     "dev:server": "cross-env NODE_ENV=development PORT=3000 nodemon server/node-server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info",
-    "dev": "concurrently 'npm run dev:client' 'npm run dev:server'",
+    "dev": "concurrently -r 'npm run dev:client' 'npm run dev:server'",
     "lint": "npm run lint-ts && npm run lint-js && npm run lint-css",
     "lint-ts": "tslint './src/**/*.ts'",
     "lint-js": "eslint '**/*.js' --ignore-path .gitignore",
