TypeScript source maps debugging + code coverage report correct (#135)
* - Fix source maps when debugging TypeScript code
- Fix code coverage report so that it generates correct numbers and uses TypeScript source maps correctly

* This typing should not have been removed

* Webpack debugging is annoying

* Webpack still too verbose

* Object.assign does not exist

* Set __TEST__ through Webpack

* Forgot to import index.ts in the tests, coverage report was wrong

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,14 @@
     "experimentalDecorators": true,
     "noImplicitAny": false,
     "removeComments": false,
-    "sourceMap": true
+    "sourceMap": false,
+    "inlineSourceMap": true,
+    "noEmitHelpers": true
+  },
+  "awesomeTypescriptLoaderOptions": {
+    "useBabel": true,
+    "useCache": false,
+    "emitRequireType": false
   },
   "exclude": [
     "node_modules",
