--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf dist/",
     "cover": "remap-istanbul -i coverage/chrome/coverage-final.json -o coverage/coverage.json",
-    "postcover": "istanbul report lcov text-summary",
+    "postcover": "istanbul report --include=**/coverage.json lcov text-summary",
     "dev:server": "cross-env NODE_ENV=development PORT=3000 nodemon server/node-server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info",
     "dev": "concurrently -r 'npm run dev:client' 'npm run dev:server'",
@@ -50,6 +50,10 @@
     "angular-mocks": "^1.5.0",
     "autoprefixer": "^6.3.3",
     "autoprefixer-core": "^6.0.1",
+    "awesome-typescript-loader": "^1.0.0",
+    "babel-core": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-polyfill": "^6.9.1",
     "basscss": "^8.0.1",
     "basscss-addons": "^1.0.0-beta4",
     "basscss-align": "^1.0.2",
@@ -81,17 +85,22 @@
     "immutable": "^3.7.6",
     "istanbul": "^0.4.3",
     "istanbul-instrumenter-loader": "^0.2.0",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.4",
     "karma-sinon": "^1.0.5",
-    "karma-source-map-support": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-sourcemap-writer": "^0.1.2",
+    "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.5.3",
+    "ng-classified": "^1.0.2",
     "ng-redux": "^3.3.3",
     "ngcomponentrouter": "^2.0.0",
     "nodemon": "^1.9.2",
@@ -114,6 +123,7 @@
     "style-loader": "^0.13.0",
     "stylelint": "^6.6.0",
     "stylelint-webpack-plugin": "^0.2.0",
+    "ts-helper": "0.0.1",
     "ts-loader": "^0.8.1",
     "tslint": "^3.8.1",
     "tslint-loader": "^2.1.4",
@@ -123,7 +133,6 @@
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0",
-    "webpack-split-by-path": "0.0.10",
-    "winston": "^2.2.0"
+    "webpack-split-by-path": "0.0.10"
   }
 }
