--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf dist/",
-    "cover": "remap-istanbul -i coverage/chrome/coverage-final.json -o coverage/coverage.json",
-    "postcover": "istanbul report --include=**/coverage.json lcov text-summary",
+    "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary html",
     "dev:server": "cross-env NODE_ENV=development PORT=3000 nodemon server/node-server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info",
     "dev": "concurrently -r 'npm run dev:client' 'npm run dev:server'",
@@ -27,7 +26,7 @@
     "postinstall": "npm run typings && npm run build",
     "start": "cross-env NODE_ENV=production node server/node-server.js",
     "pretest": "rimraf coverage/ && npm run lint",
-    "test": "karma start",
+    "test": "karma start --singleRun true",
     "posttest": "npm run cover",
     "test:watch": "karma start --singleRun false",
     "typings": "rimraf typings/ && typings install"
@@ -52,8 +51,8 @@
     "autoprefixer-core": "^6.0.1",
     "awesome-typescript-loader": "^1.0.0",
     "babel-core": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
     "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
     "basscss": "^8.0.1",
     "basscss-addons": "^1.0.0-beta4",
     "basscss-align": "^1.0.2",
@@ -83,7 +82,7 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.16.1",
     "immutable": "^3.7.6",
-    "istanbul": "^0.4.3",
+    "istanbul": "^1.0.0-alpha.2",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
