--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "basscss-typography": "^3.0.3",
     "body-parser": "^1.15.0",
     "chai": "^3.5.0",
+    "copy-webpack-plugin": "^3.0.1",
     "concurrently": "^2.1.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
