Fix line-level code coverage reports again (#148)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf dist/",
-    "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary html",
+    "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary",
     "dev:server": "cross-env NODE_ENV=development PORT=3000 nodemon server/node-server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info",
     "dev": "concurrently -r 'npm run dev:client' 'npm run dev:server'",
@@ -69,8 +69,8 @@
     "basscss-typography": "^3.0.3",
     "body-parser": "^1.15.0",
     "chai": "^3.5.0",
-    "copy-webpack-plugin": "^3.0.1",
     "concurrently": "^2.1.0",
+    "copy-webpack-plugin": "^3.0.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "cssnano": "^3.5.2",
@@ -94,6 +94,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.4",
+    "karma-remap-istanbul": "^0.1.0",
     "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-sourcemap-writer": "^0.1.2",
