--- a/.stylelintrc
+++ b/.stylelintrc
@@ -37,7 +37,7 @@
     "function-parentheses-newline-inside": "always-multi-line",
     "function-parentheses-space-inside": "never-single-line",
     "function-whitespace-after": "always",
-    "function-url-quotes": "single",
+    "function-url-quotes": "always",
     "indentation": 2,
     "max-empty-lines": 1,
     "max-line-length": [ 80, {
@@ -51,12 +51,9 @@
     "media-query-list-comma-newline-after": "always-multi-line",
     "media-query-list-comma-space-after": "always-single-line",
     "media-query-list-comma-space-before": "never",
-    "media-query-parentheses-space-inside": "never",
     "no-eol-whitespace": true,
-    "no-missing-eof-newline": true,
     "number-leading-zero": "always",
     "number-no-trailing-zeros": true,
-    "number-zero-length-no-unit": true,
     "property-no-vendor-prefix": true,
     "root-no-standard-properties": true,
     "rule-nested-empty-line-before": "always-multi-line",
