--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "typescript"
   ],
   "engines": {
-    "node": "4.4.4"
+    "node": "6"
   },
   "scripts": {
     "prebuild": "npm run clean",
@@ -25,7 +25,7 @@
     "lint-css": "stylelint './src/**/*.css'",
     "postinstall": "npm run typings && npm run build",
     "start": "cross-env NODE_ENV=production node server/node-server.js",
-    "pretest": "rimraf coverage/ && npm run lint",
+    "pretest": "rimraf coverage/ & npm run lint",
     "test": "karma start --singleRun true",
     "posttest": "npm run cover",
     "test:watch": "karma start --singleRun false",
@@ -39,14 +39,14 @@
     "url": "https://github.com/rangle/rangle-starter/issues"
   },
   "dependencies": {
-    "angular": "^1.5.0",
     "express": "^4.13.4",
     "helmet": "^2.1.0",
     "http-proxy": "^1.14.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.0",
+    "angular": "^1.5.8",
+    "angular-mocks": "^1.5.8",
     "autoprefixer": "^6.3.3",
     "autoprefixer-core": "^6.0.1",
     "awesome-typescript-loader": "^2.0.1",
@@ -54,21 +54,9 @@
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "basscss": "^8.0.1",
-    "basscss-addons": "^1.0.0-beta4",
-    "basscss-align": "^1.0.2",
+    "basscss-addons": "^1.0.0",
     "basscss-basic": "^1.0.0",
-    "basscss-border": "^4.0.2",
-    "basscss-flexbox": "^1.0.1",
-    "basscss-grid": "^2.0.0",
-    "basscss-hide": "^1.0.1",
-    "basscss-layout": "^3.1.0",
-    "basscss-margin": "^1.0.7",
-    "basscss-padding": "^1.1.3",
-    "basscss-position": "^2.0.3",
-    "basscss-type-scale": "^1.0.5",
-    "basscss-typography": "^3.0.3",
     "body-parser": "^1.15.0",
-    "chai": "^3.5.0",
     "concurrently": "^2.1.0",
     "copy-webpack-plugin": "^3.0.1",
     "cross-env": "^2.0.0",
@@ -78,7 +66,7 @@
     "es5-shim": "^4.5.7",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
-    "eslint": "^3.0.1",
+    "eslint": "^3.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.16.1",
@@ -88,19 +76,14 @@
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^1.0.0",
-    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.4",
     "karma-remap-istanbul": "^0.1.0",
-    "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.5.3",
     "ng-classified": "^1.0.2",
     "ng-redux": "^3.3.3",
     "ngcomponentrouter": "^2.0.0",
@@ -117,10 +100,8 @@
     "redux-localstorage": "^0.4.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
-    "remap-istanbul": "^0.6.1",
+    "remap-istanbul": "^0.6.3",
     "rimraf": "^2.5.2",
-    "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
     "stylelint": "^6.8.0",
     "stylelint-webpack-plugin": "^0.2.0",
@@ -129,7 +110,7 @@
     "tslint": "^3.13.0",
     "tslint-loader": "^2.1.5",
     "typescript": "^1.8.7",
-    "typings": "^1.3.1",
+    "typings": "^1.3.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
