--- a/package.json
+++ b/package.json
@@ -53,9 +53,6 @@
     "babel-core": "^6.9.1",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
-    "basscss": "^8.0.1",
-    "basscss-addons": "^1.0.0",
-    "basscss-basic": "^1.0.0",
     "body-parser": "^1.15.0",
     "concurrently": "^2.1.0",
     "copy-webpack-plugin": "^3.0.1",
@@ -105,6 +102,7 @@
     "style-loader": "^0.13.0",
     "stylelint": "^6.8.0",
     "stylelint-webpack-plugin": "^0.2.0",
+    "tachyons": "^4.5.5",
     "ts-helper": "0.0.1",
     "ts-loader": "^0.8.1",
     "tslint": "^3.13.0",
