--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["es2015"]
+  "presets": [
+    [
+      "latest", {
+        "es2015": { "modules": false }
+      }
+    ]
+  ],
+  "sourceMaps": "both",
+  "env": {
+    "karma": {
+      "presets": [ "latest" ]
+    }
+  }
 }
