--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,8 +1,9 @@
 {
   "rules": {
     "at-rule-empty-line-before": ["always", {
-      "except": ["blockless-group"],
+      "except": ["blockless-after-blockless"],
       "ignore": ["after-comment"],
+      "ignoreAtRules": ["import"]
     }],
     "at-rule-no-vendor-prefix": true,
     "block-closing-brace-newline-after": "always",
@@ -12,20 +13,16 @@
     "block-opening-brace-newline-after": "always-multi-line",
     "block-opening-brace-space-after": "always-single-line",
     "block-opening-brace-space-before": "always",
-    "color-hex-case": "lower",
-    "color-hex-length": "short",
     "color-no-invalid-hex": true,
-    "comment-empty-line-before": "always",
     "comment-whitespace-inside": "always",
     "declaration-bang-space-after": "never",
     "declaration-bang-space-before": "always",
     "declaration-block-no-shorthand-property-overrides": true,
-    "declaration-block-properties-order": "alphabetical",
     "declaration-block-trailing-semicolon": "always",
     "declaration-block-semicolon-newline-after": "always-multi-line",
     "declaration-block-semicolon-space-after": "always-single-line",
     "declaration-block-semicolon-space-before": "never",
-    "declaration-block-single-line-max-declarations": 1,
+    "declaration-block-single-line-max-declarations": 2,
     "declaration-colon-newline-after": "always-multi-line",
     "declaration-colon-space-after": "always-single-line",
     "declaration-colon-space-before": "never",
@@ -39,7 +36,7 @@
     "function-whitespace-after": "always",
     "function-url-quotes": "always",
     "indentation": 2,
-    "max-empty-lines": 1,
+    "max-empty-lines": 2,
     "max-line-length": [ 80, {
       "ignore": "non-comments",
     } ],
@@ -51,26 +48,24 @@
     "media-query-list-comma-newline-after": "always-multi-line",
     "media-query-list-comma-space-after": "always-single-line",
     "media-query-list-comma-space-before": "never",
+    "media-feature-parentheses-space-inside": "never",
     "no-eol-whitespace": true,
+    "no-missing-end-of-source-newline": true,
     "number-leading-zero": "always",
     "number-no-trailing-zeros": true,
     "property-no-vendor-prefix": true,
-    "root-no-standard-properties": true,
-    "rule-nested-empty-line-before": "always-multi-line",
-    "rule-non-nested-empty-line-before": ["always-multi-line", {
-      except: ["after-single-line-comment"]
+    "rule-empty-line-before": ["always-multi-line", {
+      except: ["first-nested", "after-single-line-comment"]
     }],
-    "selector-combinator-space-after": "always",
-    "selector-combinator-space-before": "always",
     "selector-list-comma-newline-after": "always",
     "selector-list-comma-space-before": "never",
     "selector-no-vendor-prefix": true,
     "selector-pseudo-element-colon-notation": "double",
-    "selector-root-no-composition": true,
     "string-quotes": "single",
     "value-list-comma-newline-after": "always-multi-line",
     "value-list-comma-space-after": "always-single-line",
     "value-list-comma-space-before": "never",
     "value-no-vendor-prefix": true,
-  },
+    "length-zero-no-unit": true,
+  }
 }
