--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf dist/",
-    "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary",
+    "cover": "istanbul report --include=**/coverage/coverage.json text text-summary",
     "dev:server": "cross-env NODE_ENV=development PORT=3000 nodemon server/node-server.js",
-    "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --debug --inline --hot --progress --no-info",
     "dev": "concurrently -r 'npm run dev:client' 'npm run dev:server'",
     "lint": "npm run lint-ts && npm run lint-js && npm run lint-css",
     "lint-ts": "tslint './src/**/*.ts'",
@@ -26,7 +26,7 @@
     "postinstall": "npm run typings && npm run build",
     "start": "cross-env NODE_ENV=production node server/node-server.js",
     "pretest": "rimraf coverage/ & npm run lint",
-    "test": "karma start --singleRun true",
+    "test": "BABEL_ENV=karma karma start --singleRun true",
     "posttest": "npm run cover",
     "test:watch": "karma start --singleRun false",
     "typings": "rimraf typings/ && typings install"
@@ -45,38 +45,44 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "@types/angular-mocks": "^1.5.9",
+    "@types/angularjs": "^1.5.14-alpha",
+    "@types/core-js": "0.9.34",
+    "@types/jasmine": "2.5.35",
+    "@types/jquery": "^2.0.40",
+    "@types/node": "6.0.45",
+    "@types/ramda": "0.0.2",
     "angular": "^1.5.8",
     "angular-mocks": "^1.5.8",
-    "autoprefixer": "^6.4.0",
+    "autoprefixer": "6.5.1",
     "autoprefixer-core": "^6.0.1",
-    "awesome-typescript-loader": "^1.1.1",
-    "babel-core": "^6.9.1",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
+    "awesome-typescript-loader": "^3.0.0-beta.9",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
     "body-parser": "^1.15.0",
     "concurrently": "^2.1.0",
-    "copy-webpack-plugin": "^3.0.1",
+    "copy-webpack-plugin": "4.0.0",
+    "core-js": "^2.4.1",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "cssnano": "^3.5.2",
     "denodeify": "^1.2.1",
-    "es5-shim": "^4.5.7",
-    "es6-promise": "^3.1.2",
-    "es6-shim": "^0.35.0",
     "eslint": "^3.2.2",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.16.1",
+    "html-webpack-plugin": "2.22.0",
     "immutable": "^3.7.6",
     "istanbul": "^1.0.0-alpha.2",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
-    "karma": "^1.0.0",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.1.0",
+    "karma-remap-coverage": "0.1.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.26",
@@ -85,11 +91,12 @@
     "ng-redux": "^3.3.3",
     "ngcomponentrouter": "^2.0.0",
     "nodemon": "^1.9.2",
+    "null-loader": "^0.1.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "postcss-cssnext": "^2.7.0",
-    "postcss-import": "^8.1.1",
-    "postcss-loader": "^0.9.1",
+    "postcss-cssnext": "2.8.0",
+    "postcss-import": "9.1.0",
+    "postcss-loader": "1.0.0",
     "postcss-modules-local-by-default": "^1.1.0",
     "ramda": "^0.22.1",
     "raw-loader": "^0.5.1",
@@ -99,20 +106,19 @@
     "redux-thunk": "^2.0.1",
     "remap-istanbul": "^0.6.3",
     "rimraf": "^2.5.2",
-    "style-loader": "^0.13.0",
-    "stylelint": "^6.8.0",
-    "stylelint-webpack-plugin": "^0.3.0",
-    "tachyons": "^4.5.5",
-    "ts-helper": "0.0.1",
+    "style-loader": "^0.13.1",
+    "stylelint": "^7.7.0",
+    "stylelint-webpack-plugin": "^0.5.1",
+    "tachyons": "^4.6.1",
+    "ts-helpers": "^1.1.2",
     "ts-loader": "^0.8.1",
     "tslint": "^3.13.0",
     "tslint-loader": "^2.1.5",
-    "typescript": "^1.8.7",
+    "typescript": "^2.1.4",
     "typings": "^1.3.2",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.10.0",
-    "webpack-split-by-path": "0.0.10"
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.3.0",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
