Remove babel - ATL transpiles directly to ES5 - Fixed test:watch - simplified tests.entry.ts - switched to done() for async tests. The tests were written with an assumption that jasmine-promises is available but, it is not. It seems like the project is no longer active.

--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "lint-ts": "tslint './src/**/*.ts'",
     "lint-js": "eslint '**/*.js' --ignore-path .gitignore",
     "lint-css": "stylelint './src/**/*.css'",
-    "postinstall": "npm run typings && npm run build",
+    "postinstall": "npm run build",
     "start": "cross-env NODE_ENV=production node server/node-server.js",
     "pretest": "rimraf coverage/ & npm run lint",
-    "test": "BABEL_ENV=karma karma start --singleRun true",
+    "test": "karma start --singleRun true",
     "posttest": "npm run cover",
-    "test:watch": "karma start --singleRun false",
-    "typings": "rimraf typings/ && typings install"
+    "test:watch": "karma start --singleRun false"
   },
   "repository": {
     "type": "git",
@@ -52,15 +51,11 @@
     "@types/jquery": "^2.0.40",
     "@types/node": "6.0.45",
     "@types/ramda": "0.0.2",
-    "angular": "^1.5.8",
-    "angular-mocks": "^1.5.8",
+    "angular": "^1.6.2",
+    "angular-mocks": "^1.6.2",
     "autoprefixer": "6.5.1",
     "autoprefixer-core": "^6.0.1",
     "awesome-typescript-loader": "^3.0.0-beta.9",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-latest": "^6.16.0",
     "body-parser": "^1.15.0",
     "concurrently": "^2.1.0",
     "copy-webpack-plugin": "4.0.0",
@@ -76,17 +71,16 @@
     "immutable": "^3.7.6",
     "istanbul": "^1.0.0-alpha.2",
     "istanbul-instrumenter-loader": "^0.2.0",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
+    "jasmine-core": "^2.5.2 ",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "^1.1.0",
     "karma-remap-coverage": "0.1.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.8.0",
+    "karma-webpack": "2.0.2",
     "ng-classified": "^1.0.2",
     "ng-redux": "^3.3.3",
     "ngcomponentrouter": "^2.0.0",
@@ -94,10 +88,10 @@
     "null-loader": "^0.1.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "postcss-cssnext": "2.8.0",
-    "postcss-import": "9.1.0",
-    "postcss-loader": "1.0.0",
-    "postcss-modules-local-by-default": "^1.1.0",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.2.2",
+    "postcss-modules-local-by-default": "^1.1.1",
     "ramda": "^0.22.1",
     "raw-loader": "^0.5.1",
     "redux": "^3.5.2",
@@ -111,11 +105,9 @@
     "stylelint-webpack-plugin": "^0.5.1",
     "tachyons": "^4.6.1",
     "ts-helpers": "^1.1.2",
-    "ts-loader": "^0.8.1",
     "tslint": "^3.13.0",
     "tslint-loader": "^2.1.5",
     "typescript": "^2.1.4",
-    "typings": "^1.3.2",
     "url-loader": "^0.5.7",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0",
